Just run the cell to remove the error message

--- a/ScalarSanctuary.ipynb
+++ b/ScalarSanctuary.ipynb
@@ -792,8 +792,54 @@
     "- Do the simulated temperatures get closer to the exact solution as $\\Delta t$ becomes smaller?\n",
     "- How does the smaller $\\Delta t$ impact the smoothness of the curve in the simulation?\n",
     "\n",
-    "By reducing $\\Delta t$, you are essentially increasing the resolution of the simulation, which should make the results more accurate. However, this also increases the number of calculations the program needs to perform. Is there a trade-off between accuracy and computational effort?\n"
+    "By reducing $\\Delta t$, you are essentially increasing the resolution of the simulation, which should make the results more accurate. However, this also increases the number of calculations the program needs to perform. Is there a trade-off b\n",
+    "etween accuracy and computational effort?\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ba70278-2509-4fae-85d2-055e2de3b614",
+   "metadata": {},
+   "source": [
+    "# PhyPy\n",
+    "\n",
+    "**PhyPy** is an educational repository designed to teach Python programming alongside Physics concepts using Jupyter Notebooks. The repository is ideal for students and educators looking for a hands-on, integrative learning experience.\n",
+    "\n",
+    "## 📘 Overview\n",
+    "\n",
+    "The notebooks in this repository guide users through physics concepts such as thermodynamics, mechanics, and electromagnetism, while simultaneously teaching Python for simulations and problem-solving. The repository is perfect for beginners in both Python and Physics, as it breaks down complex concepts into manageable exercises.\n",
+    "\n",
+    "## 🚀 Getting Started\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "To use this repository, you'll need:\n",
+    "\n",
+    "- Python 3.x\n",
+    "- Jupyter Notebook\n",
+    "- Required Python libraries: `numpy`, `matplotlib`\n",
+    "\n",
+    "### Installation\n",
+    "\n",
+    "1. Clone this repository:\n",
+    "   ```bash\n",
+    "   git clone https://github.com/rasnarim/PhyPy.git\n",
+    "   cd PhyPy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6454d4b8-30fd-4450-b0da-a349537c00d7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "811acb74-164c-4d04-b0de-41e54c0bef6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
