Added student version

--- a/Battleship_nd.ipynb
+++ b/Battleship_nd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "556fd655-5337-42f5-942a-83b030ab3662",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting position: [4, 2]\n"
+      "Starting position: [3, 2]\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the coordinates you want to hit in 2D (space-separated):  4 2 \n"
+      "Enter the coordinates you want to hit in 2D (space-separated):  0 0 \n"
      ]
     },
     {
@@ -25,31 +25,15 @@
      "output_type": "stream",
      "text": [
       "Miss!\n",
-      "Your current position after the move: [4, 2]\n",
-      "Hint: Move by displacement vector: [-3 -2]\n"
+      "Your current position after the move: [0, 0]\n",
+      "Hint: Move by displacement vector: [2 0]\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the coordinates you want to hit in 2D (space-separated):  1 1 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Miss!\n",
-      "Your current position after the move: [1, 1]\n",
-      "Hint: Move by displacement vector: [ 0 -1]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the coordinates you want to hit in 2D (space-separated):  1 0\n"
+      "Enter the coordinates you want to hit in 2D (space-separated):  2 0\n"
      ]
     },
     {
@@ -57,8 +41,40 @@
      "output_type": "stream",
      "text": [
       "Hit!\n",
-      "Your current position after the move: [1, 0]\n",
-      "Hint: Move by displacement vector: [-1  0]\n"
+      "Your current position after the move: [2, 0]\n",
+      "Hint: Move by displacement vector: [2 1]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the coordinates you want to hit in 2D (space-separated):  4 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit!\n",
+      "Your current position after the move: [4, 1]\n",
+      "Hint: Move by displacement vector: [-4  2]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the coordinates you want to hit in 2D (space-separated):  0 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hit!\n",
+      "Your current position after the move: [0, 3]\n",
+      "Congratulations! You've destroyed all the ships and won the game!\n"
      ]
     }
    ],
@@ -179,7 +195,7 @@
     "    print(\"Congratulations! You've destroyed all the ships and won the game!\")\n",
     "\n",
     "# Game parameters\n",
-    "dimensions = 2  # The number of dimensions for the game grid (e.g., 2 for 2D, 3 for 3D, 4 for 4D)\n",
+    "dimensions = 3  # The number of dimensions for the game grid (e.g., 2 for 2D, 3 for 3D, 4 for 4D)\n",
     "grid_size = 5   # The size of the grid along each dimension (e.g., a 5x5x5x5 grid in 4D)\n",
     "num_ships = 3   # The number of ships to be placed on the grid\n",
     "\n",
