Minor change of the class defenition

--- a/Modeling_1D_Motion_with_OOP.ipynb
+++ b/Modeling_1D_Motion_with_OOP.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b019b5ef-5690-4d7d-939b-b7f6df2b2bff",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9673c790-2e04-4ffe-ac5c-687875e6e971",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,8 @@
      "output_type": "stream",
      "text": [
       "Mass of the cart is: 1200 kg\n",
-      "{'mass': 1200, 'position': 0, 'velocity': 0, 'acceleration': 0}\n"
+      "Position of the cart is: 0 m\n",
+      "Velocity of the cart is: 0 m/s\n"
      ]
     }
    ],
@@ -78,16 +79,6 @@
     "        self.velocity = velocity  # Initial velocity (in meters/second)\n",
     "        self.acceleration = acceleration  # Initial acceleration (in meters/second^2)\n",
     "\n",
-    "    def get_state(self):\n",
-    "        \"\"\"\n",
-    "        Return the current state of the car as a dictionary.\n",
-    "        \"\"\"\n",
-    "        return {\n",
-    "            'mass': self.mass,\n",
-    "            'position': self.position,\n",
-    "            'velocity': self.velocity,\n",
-    "            'acceleration': self.acceleration\n",
-    "        }\n",
     "\n",
     "\n",
     "# Example: Create a car with a mass of 1200 kg, at rest at position 0\n",
@@ -95,9 +86,8 @@
     "\n",
     "# It is possible to access different properties(atributes) of this object (Car).\n",
     "print(f\"Mass of the cart is: {car.mass} kg\")\n",
-    "# Let's check the initial state of the car\n",
-    "print(car.get_state())\n",
-    "\n"
+    "print(f\"Position of the cart is: {car.position} m\")\n",
+    "print(f\"Velocity of the cart is: {car.velocity} m/s\")\n"
    ]
   },
   {
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7891bacb-eac6-4e41-ab07-2d031ca1f340",
    "metadata": {},
    "outputs": [
@@ -145,7 +135,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mass': 1200, 'position': 50, 'velocity': 10}\n"
+      "Mass of the cart is: 1200 kg\n",
+      "Position of the cart is: 50 m\n",
+      "Velocity of the cart is: 10 m/s\n"
      ]
     }
    ],
@@ -177,15 +169,7 @@
     "        # Euler method for position update: s = s + v * dt\n",
     "        self.position += self.velocity * time_interval\n",
     "    \n",
-    "    def get_state(self):\n",
-    "        \"\"\"\n",
-    "        Return the current state of the car as a dictionary.\n",
-    "        \"\"\"\n",
-    "        return {\n",
-    "            'mass': self.mass,\n",
-    "            'position': self.position,\n",
-    "            'velocity': self.velocity\n",
-    "        }\n",
+    "\n",
     "\n",
     "# Example: Create a car with a mass of 1200 kg, moving with a constant velocity of 10 m/s\n",
     "cruising_car = Car(mass=1200, velocity=10)\n",
@@ -193,9 +177,11 @@
     "# Update the position after 5 seconds of driving at constant speed\n",
     "cruising_car.update(5)\n",
     "\n",
-    "# Check the updated state of the car\n",
-    "print(cruising_car.get_state())\n",
-    "\n"
+    "\n",
+    "# It is possible to access different properties(atributes) of this object (Car).\n",
+    "print(f\"Mass of the cart is: {cruising_car.mass} kg\")\n",
+    "print(f\"Position of the cart is: {cruising_car.position} m\")\n",
+    "print(f\"Velocity of the cart is: {cruising_car.velocity} m/s\")"
    ]
   },
   {
@@ -244,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b8f5d8ba-0830-4dee-8e56-a58176d61b82",
    "metadata": {},
    "outputs": [
@@ -252,7 +238,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mass': 1200, 'position': 80, 'velocity': 20, 'acceleration': 2}\n"
+      "Mass of the cart is: 1200 kg\n",
+      "Position of the cart is: 80 m\n",
+      "Velocity of the cart is: 20 m/s\n"
      ]
     }
    ],
@@ -289,16 +277,7 @@
     "        # Update position using Euler's method: s = s + v * dt\n",
     "        self.position += self.velocity * time_interval\n",
     "\n",
-    "    def get_state(self):\n",
-    "        \"\"\"\n",
-    "        Return the current state of the car as a dictionary.\n",
-    "        \"\"\"\n",
-    "        return {\n",
-    "            'mass': self.mass,\n",
-    "            'position': self.position,\n",
-    "            'velocity': self.velocity,\n",
-    "            'acceleration': self.acceleration\n",
-    "        }\n",
+    "\n",
     "\n",
     "# Example: Create a car with a mass of 1200 kg, an initial velocity of 10 m/s, and an acceleration of 2 m/s^2\n",
     "accelerating_car = Car(mass=1200, velocity=10, acceleration=2)\n",
@@ -307,8 +286,10 @@
     "for i in range(5):\n",
     "    accelerating_car.update(1)\n",
     "\n",
-    "# Check the updated state of the car\n",
-    "print(accelerating_car.get_state())\n"
+    "# let's check the current status of the car\n",
+    "print(f\"Mass of the cart is: {accelerating_car.mass} kg\")\n",
+    "print(f\"Position of the cart is: {accelerating_car.position} m\")\n",
+    "print(f\"Velocity of the cart is: {accelerating_car.velocity} m/s\")\n"
    ]
   },
   {
@@ -353,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f02a9a4c-550d-46ee-9ac2-d7c3e19ba1a5",
    "metadata": {},
    "outputs": [
@@ -386,9 +367,9 @@
     "# Simulation loop\n",
     "for t in times:\n",
     "    car.update(time_interval)\n",
-    "    state = car.get_state()\n",
-    "    velocities.append(state['velocity'])\n",
-    "    positions.append(state['position'])\n",
+    "\n",
+    "    velocities.append(car.velocity)\n",
+    "    positions.append(car.position)\n",
     "\n",
     "# Plotting the results\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -450,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "d9499c90-d73e-46ec-b620-341950c94869",
    "metadata": {},
    "outputs": [
@@ -484,10 +465,9 @@
     "for t in times:\n",
     "    car.acceleration = acceleration_rate * t  # Update acceleration linearly with time\n",
     "    car.update(time_interval)\n",
-    "    state = car.get_state()\n",
-    "    velocities_dynamic.append(state['velocity'])\n",
-    "    positions_dynamic.append(state['position'])\n",
-    "    accelerations_dynamic.append(state['acceleration'])\n",
+    "    velocities_dynamic.append(car.velocity)\n",
+    "    positions_dynamic.append(car.position)\n",
+    "    accelerations_dynamic.append(car.acceleration)\n",
     "\n",
     "# Plotting the results\n",
     "import matplotlib.pyplot as plt\n",
@@ -527,14 +507,18 @@
    "source": [
     "### Explanation:\n",
     "\n",
-    "- We simulate the car's motion over a 20-second time period, using the Euler method to update both the car’s velocity and position.\n",
-    "- We then plot the velocity and position as functions of time to visualize how they change due to the constant acceleration.\n",
+    "In this example:\n",
+    "- We reused the original `Car` class and manually updated the car’s acceleration in each time step to increase linearly.\n",
+    "- The car starts with an initial velocity of 10 m/s, and the acceleration increases by 0.2 m/s² every second.\n",
+    "- We used the Euler method to update both the velocity and position based on the changing acceleration.\n",
     "\n",
-    "#### Key Observations:\n",
-    "1. **Velocity** increases linearly because the car has a constant acceleration of 2 m/s².\n",
-    "2. **Position** increases quadratically, meaning the car covers more distance as its velocity increases.\n",
+    "### Key Observations:\n",
+    "1. **Acceleration**: Increases linearly, starting from 0 and increasing by 0.2 m/s² every second.\n",
+    "2. **Velocity**: Increases non-linearly because the car’s acceleration is increasing.\n",
+    "3. **Position**: Increases quadratically, as the car covers more distance over time due to its increasing velocity.\n",
     "\n",
-    "The plot allows us to see how velocity and position evolve over time for a car accelerating from an initial speed of 10 m/s.\n",
+    "This example shows how linearly increasing acceleration affects both velocity and position, reinforcing the relationship between these quantities.\n",
+    "\n",
     "\n",
     "\n"
    ]
